Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a {
     height: 100%;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1145px) {
     html,
     body {
         overflow-y: auto;
